--- a/s2i/bin/Gemfile
+++ b/s2i/bin/Gemfile
@@ -4,6 +4,8 @@ source "https://rubygems.org"
 
 #git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
+gem 'jekyll'
+
 group :jekyll_plugins do
   gem 'jekyll-asciidoc'
 end
